--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.3",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.3",
     "@angular/compiler": "~10.0.3",
     "@angular/core": "~10.0.3",
     "@angular/forms": "~10.0.3",
+    "@angular/localize": "~10.0.3",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "bootstrap": "^5.1.0",
     "chart.js": "^2.9.4",
+    "jquery": "^3.6.0",
     "ng2-charts": "^2.4.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "sweetalert2": "^10.14.0",
     "tslib": "^2.0.0",
